# MokioToolsPackage

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/core/: Cargo.toml
crates/core/assets/ghostty/: config
crates/core/assets/yazi/: keymap.toml  theme.toml  yazi.toml
crates/core/src/: catalog.rs  detect.rs  error.rs  event.rs  github.rs  i18n.rs  installer.rs  lib.rs  shell.rs
crates/core/src/tools/: cc_switch.rs  chrome.rs  claude_code.rs  codex.rs  git.rs  homebrew.rs  mod.rs  node.rs  terminal.rs  uv.rs  vscode.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  main.rs  ui.rs
desktop/: Cargo.toml  tauri.conf.json
desktop/capabilities/: default.json
desktop/frontend/: index.html  main.js  styles.css
desktop/icons/: gen_icons.py  icon.icns
desktop/src/: lib.rs  main.rs
