[package]
name = "mokio-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Desktop (Tauri) front-end for the Mokio toolchain bootstrap."

[lib]
name = "mokio_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
mokio-core.workspace = true
tauri = { version = "2", features = [] }
serde.workspace = true
serde_json.workspace = true
