[package]
name = "mokio-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Terminal UI for the Mokio toolchain bootstrap."

[[bin]]
name = "mokio"
path = "src/main.rs"

[dependencies]
mokio-core.workspace = true
ratatui = "0.29"
crossterm = "0.28"
